--- a/NeoTimingTest/app/src/main/res/layout/activity_import_wallet.xml
+++ b/NeoTimingTest/app/src/main/res/layout/activity_import_wallet.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="text"
+        android:text="KzuSoWSBrkcdjuhrfa6r36apemvpLCySjbFfvFHz6Cj94KgFNDWr"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.817"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -60,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:text="neo3"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.82"
